samples/_failures_safe/1761519709_ea5b32_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e1f4776f.c: In function ‘main’:
./samples/SAFE/__tmp_e1f4776f.c:127:16: error: missing terminating " character
  127 |         printf("Error: Invalid input format\n
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_e1f4776f.c:127:9: error: expected expression at end of input
  127 |         printf("Error: Invalid input format\n
      |         ^~~~~~
./samples/SAFE/__tmp_e1f4776f.c:127:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e1f4776f.c:127:9: error: expected declaration or statement at end of input
